--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -80,9 +80,21 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/users/nexus">
+                <i class="ni ni-atom text-primary"></i>
+                <span class="nav-link-text">Nexus Resources</span>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/users/upload">
                 <i class="ni ni-spaceship text-pink"></i>
                 <span class="nav-link-text">Upload</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/users/vision">
+                <i class="ni ni-planet text-orange"></i>
+                <span class="nav-link-text">Vision</span>
               </a>
             </li>
             <li class="nav-item">
