--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -41,7 +41,7 @@
           <!-- Nav items -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/users">
+              <a class="nav-link " href="/users">
                 <i class="ni ni-tv-2 text-primary"></i>
                 <span class="nav-link-text">Connect</span>
               </a>
@@ -59,7 +59,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/vision">
+              <a class="nav-link active" href="/users/vision">
                 <i class="ni ni-planet text-orange"></i>
                 <span class="nav-link-text">Vision</span>
               </a>
