--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -192,11 +192,19 @@
       <textarea name="books" id="books" class="form-control" placeholder="The Road to React, React in Action (Seperate multiple books with commas)"></textarea>
     </div>
     <div class="form-group col-md-12">
-      <label for="example-text-input" class="form-control-label" rows="5">Blogs</label>
+      <label for="example-text-input" class="form-control-label" rows="5">Blog Names</label>
+      <textarea name="blognames" id="blognames" class="form-control" placeholder="Build your first blog using react (Seperate multiple blogs with commas)"></textarea>
+    </div>
+    <div class="form-group col-md-12">
+      <label for="example-text-input" class="form-control-label" rows="5">Blog Links</label>
       <textarea name="blogs" id="blogs" class="form-control" placeholder="https://www.sanity.io/guides/build-your-first-blog-using-react (Seperate multiple blogs with commas)"></textarea>
     </div>
     <div class="form-group col-md-12">
-      <label for="example-text-input" class="form-control-label" rows="5">Videos</label>
+      <label for="example-text-input" class="form-control-label" rows="5">Video Names</label>
+      <textarea name="videonames" id="videonames" class="form-control" placeholder="Build A Todo App With REACT | React Project For Beginners (Seperate multiple videos with commas)"></textarea>
+    </div>
+    <div class="form-group col-md-12">
+      <label for="example-text-input" class="form-control-label" rows="5">Video Links</label>
       <textarea name="videos" id="videos" class="form-control" placeholder="https://www.youtube.com/watch?v=pCA4qpQDZD8 (Seperate multiple videos with commas)"></textarea>
     </div>
   <div class="form-group col-md-12">
