--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -82,13 +82,13 @@
             <li class="nav-item">
               <a class="nav-link" href="/users/nexus">
                 <i class="ni ni-atom text-primary"></i>
-                <span class="nav-link-text">Nexus Resources</span>
+                <span class="nav-link-text">Nexus</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/upload">
                 <i class="ni ni-spaceship text-pink"></i>
-                <span class="nav-link-text">Upload</span>
+                <span class="nav-link-text">Upload Resources</span>
               </a>
             </li>
             <li class="nav-item">
