--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -44,7 +44,7 @@
             <li class="nav-item">
               <a class="nav-link active" href="/users">
                 <i class="ni ni-tv-2 text-primary"></i>
-                <span class="nav-link-text">Connect</span>
+                <span class="nav-link-text">Wanda</span>
               </a>
             </li>
             <li class="nav-item">
@@ -160,7 +160,7 @@
       <div class="container-fluid">
         <br>
         <br>
-        <h1>Study Room</h1>
+        <h1>Wanda</h1>
         <p>
         - Don’t talk during pomodoros (work periods). <br>
         - Do talk during breaks. <br>
