--- a/views/nexus.ejs
+++ b/views/nexus.ejs
@@ -44,7 +44,7 @@
             <li class="nav-item">
               <a class="nav-link " href="/users">
                 <i class="ni ni-tv-2 text-primary"></i>
-                <span class="nav-link-text">Connect</span>
+                <span class="nav-link-text">Wanda</span>
               </a>
             </li>
             <li class="nav-item">
@@ -177,7 +177,7 @@
                     <% } %>
                     <br>
                     <p style="margin-bottom: 1px; margin-top: 10px; font-size: 21px;">Videos</p>
-                    <% for (let j = 0 ; j< posts[i].blogs.length ; j++){ %>
+                    <% for (let j = 0 ; j< posts[i].videos.length ; j++){ %>
                       <a href="<%- posts[i].videos[j]%>" class="btn btn-outline-info btn-block"><%- posts[i].videonames[j]%></a>
                     <% } %>
                     
