--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -58,7 +58,7 @@
             <li class="nav-item">
               <a class="nav-link " href="/users">
                 <i class="ni ni-tv-2 text-primary"></i>
-                <span class="nav-link-text">Connect</span>
+                <span class="nav-link-text">Wanda</span>
               </a>
             </li>
             <li class="nav-item">
